# VE482-1

./: CMakeLists.txt
homework/homework1/: ex5.sh  homework1.tex
homework/homework1/ex5/: README.md  ex5.sh
homework/homework2/: ex1.m  homework2.tex
homework/homework3/: CMakeLists.txt  homework3.tex
homework/homework3/ex3/: README.md  dec_double.txt  dec_int.txt  dec_string.txt  inc_int.txt  inc_string.txt  list.c  list.h  main.c  rand_string.txt  test.c  test.py
homework/homework4/: .gitignore  CMakeLists.txt  ex3_no_race.sh  ex3_race.sh  ex4.c  homework4.tex
homework/homework5/: CMakeLists.txt  ex4.cpp  ex5.c  homework5.tex
homework/homework6/: ex3  ex3.c  ex5.c  homework6.tex
lab/lab1/: lab1.tex
lab/lab2/: 1.sh  515370910207.pub  lab2.tex  sed.sh  sed.txt
lab/lab3/: lab3.tex
lab/lab4/: CMakeLists.txt  api.c  cli.c  inc_double.txt  interface.c  interface.h  l4.txt  lab4.tex  list.c  list.h  logic.c  logic.h  rand_double.txt  rand_int.txt  ui.c
lab/lab5/: lab5.tex
lab/lab6/: CMakeLists.txt  dlist.c  dlist.h  list.c  list.h  main.c
xor_linked_list/: CMakeLists.txt  list.c  list.h  main.c
